[chromium] Check for lost context at beginning of compositor's execution https://bugs.webkit.org/show_bug.cgi?id=69776

Reviewed by James Robinson.

Source/WebCore:

Test: platform/chromium/compositing/webgl-loses-compositor-context.html

* platform/graphics/chromium/cc/CCSingleThreadProxy.cpp:
(WebCore::CCSingleThreadProxy::recreateContextIfNeeded):

LayoutTests:

Added test case which asserts when run in Chrome with dynamic GPU
switching enabled and without the fix in this patch.

* platform/chromium/compositing/webgl-loses-compositor-context-expected.png: Added.
* platform/chromium/compositing/webgl-loses-compositor-context-expected.txt: Added.
* platform/chromium/compositing/webgl-loses-compositor-context.html: Added.


Canonical link: https://commits.webkit.org/85927@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97194 268f45cc-cd09-0410-ab3c-d52691b4dbfc